Created page with "==== Karta Import-Export ===="

--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -137,8 +137,9 @@
 <h4><span id="Karta_Pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Karta_Pracovn&iacute;_plochy">Karta Pracovn&iacute; plochy</span></h4>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_WBMenu.png&amp;filetimestamp=20240613205416&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_WBMenu.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a><figcaption></figcaption></figure>
 <p>A&#269;koli se FreeCAD obvykle otev&iacute;r&aacute; na &uacute;vodn&iacute; str&aacute;nce, toto nastaven&iacute; v&aacute;m umo&#382;&#328;uje ji obej&iacute;t. M&#367;&#382;ete za&#269;&iacute;t p&#345;&iacute;mo ve sv&eacute;m preferovan&eacute;m pracovn&iacute;m prost&#345;ed&iacute;. Nav&iacute;c m&#367;&#382;ete p&#345;izp&#367;sobit, kter&aacute; pracovn&iacute; prost&#345;ed&iacute; se zobrazuj&iacute; v menu pro v&yacute;b&#283;r.
+</p><p><span id="Import-Export_tab"></span>
 </p>
-<h4><span class="mw-headline" id="Import-Export_tab">Import-Export tab</span></h4>
+<h4><span class="mw-headline" id="Karta_Import-Export">Karta Import-Export</span></h4>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_ImportExport.png&amp;filetimestamp=20240613205404&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_ImportExport.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a><figcaption></figcaption></figure>
 <p>Here, define basic parameters for importing and exporting in various formats.
 </p>
@@ -171,13 +172,13 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112022005
+Cached time: 20260112022037
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.123 seconds
-Preprocessor visited node count: 133/1000000
+CPU time usage: 0.090 seconds
+Real time usage: 0.153 seconds
+Preprocessor visited node count: 134/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
 Highest expansion depth: 5/100
@@ -187,13 +188,13 @@ Unstrip post&#8208;expand size: 2778/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.740      1 -total
- 73.48%    6.422      1 Template:Manual:TOC
- 54.85%    4.794      1 Manual:Summary/cs
- 22.47%    1.964      2 Template:Docnav
+100.00%   13.665      1 -total
+ 81.81%   11.180      1 Template:Manual:TOC
+ 61.62%    8.420      1 Manual:Summary/cs
+ 15.32%    2.094      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112022005 and revision id 1736928. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112022037 and revision id 1736930. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
