--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -141,7 +141,7 @@
 </p>
 <h4><span class="mw-headline" id="Karta_Import-Export">Karta Import-Export</span></h4>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_ImportExport.png&amp;filetimestamp=20240613205404&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_ImportExport.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a><figcaption></figcaption></figure>
-<p>Here, define basic parameters for importing and exporting in various formats.
+<p>Zde definujte z&aacute;kladn&iacute; parametry pro import a export v r&#367;zn&yacute;ch form&aacute;tech.
 </p>
 <h3><span class="mw-headline" id="Installing_additional_content">Installing additional content</span></h3>
 <p>As the FreeCAD community expands and the ease of customization grows, numerous external contributions and side projects by community members and enthusiasts start popping up all over the internet. Many of these projects take the form of workbenches or macros, and you can easily add them to your toolbox via the <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>, which is accessible from the Tools menu. The Addon Manager opens up a world of possibilities, allowing you to install various interesting components, such as:
@@ -172,12 +172,12 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112022045
+Cached time: 20260112022114
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.115 seconds
+CPU time usage: 0.102 seconds
+Real time usage: 0.196 seconds
 Preprocessor visited node count: 134/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
@@ -188,13 +188,13 @@ Unstrip post&#8208;expand size: 2778/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.396      1 -total
- 75.60%    6.347      1 Template:Manual:TOC
- 57.84%    4.856      1 Manual:Summary/cs
- 20.14%    1.691      2 Template:Docnav
+100.00%   29.678      1 -total
+ 51.24%   15.206      2 Template:Docnav
+ 46.97%   13.940      1 Template:Manual:TOC
+ 33.20%    9.852      1 Manual:Summary/cs
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112022045 and revision id 1736930. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112022114 and revision id 1736933. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
