--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -142,8 +142,9 @@
 <h4><span class="mw-headline" id="Karta_Import-Export">Karta Import-Export</span></h4>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_ImportExport.png&amp;filetimestamp=20240613205404&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_ImportExport.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a><figcaption></figcaption></figure>
 <p>Zde definujte z&aacute;kladn&iacute; parametry pro import a export v r&#367;zn&yacute;ch form&aacute;tech.
+</p><p><span id="Installing_additional_content"></span>
 </p>
-<h3><span class="mw-headline" id="Installing_additional_content">Installing additional content</span></h3>
+<h3><span id="Instalace_dal.C5.A1.C3.ADho_obsahu"></span><span class="mw-headline" id="Instalace_dal&scaron;&iacute;ho_obsahu">Instalace dal&scaron;&iacute;ho obsahu</span></h3>
 <p>As the FreeCAD community expands and the ease of customization grows, numerous external contributions and side projects by community members and enthusiasts start popping up all over the internet. Many of these projects take the form of workbenches or macros, and you can easily add them to your toolbox via the <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>, which is accessible from the Tools menu. The Addon Manager opens up a world of possibilities, allowing you to install various interesting components, such as:
 </p>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_AddonsMenu.png&amp;filetimestamp=20240613205204&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_AddonsMenu.png" decoding="async" width="796" height="636" class="mw-file-element" data-file-width="796" data-file-height="636"></a><figcaption></figcaption></figure>
@@ -172,13 +173,13 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112022114
+Cached time: 20260112022136
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.102 seconds
-Real time usage: 0.196 seconds
-Preprocessor visited node count: 134/1000000
+CPU time usage: 0.094 seconds
+Real time usage: 0.136 seconds
+Preprocessor visited node count: 135/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
 Highest expansion depth: 5/100
@@ -188,13 +189,13 @@ Unstrip post&#8208;expand size: 2778/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.678      1 -total
- 51.24%   15.206      2 Template:Docnav
- 46.97%   13.940      1 Template:Manual:TOC
- 33.20%    9.852      1 Manual:Summary/cs
+100.00%   10.458      1 -total
+ 75.57%    7.903      1 Template:Manual:TOC
+ 53.80%    5.626      1 Manual:Summary/cs
+ 20.43%    2.137      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112022114 and revision id 1736933. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112022136 and revision id 1736935. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
