--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -148,9 +148,9 @@
 <p>S roz&scaron;i&#345;ov&aacute;n&iacute;m komunity FreeCADu a rostouc&iacute; snadnost&iacute; p&#345;izp&#367;soben&iacute; se na internetu za&#269;&iacute;naj&iacute; objevovat &#269;etn&eacute; extern&iacute; p&#345;&iacute;sp&#283;vky a vedlej&scaron;&iacute; projekty &#269;len&#367; komunity a nad&scaron;enc&#367;. Mnoh&eacute; z t&#283;chto projekt&#367; maj&iacute; podobu pracovn&iacute;ho prost&#345;ed&iacute; nebo maker a m&#367;&#382;ete je snadno p&#345;idat do sv&eacute; sady n&aacute;stroj&#367; pomoc&iacute; <a href="../Std_AddonMgr.html" title="Std AddonMgr">Spr&aacute;vce dopl&#328;k&#367;</a>, kter&yacute; je p&#345;&iacute;stupn&yacute; z menu N&aacute;stroje. Spr&aacute;vce dopl&#328;k&#367; otev&iacute;r&aacute; sv&#283;t mo&#382;nost&iacute; a umo&#382;&#328;uje v&aacute;m instalovat r&#367;zn&eacute; zaj&iacute;mav&eacute; komponenty, jako nap&#345;&iacute;klad:
 </p>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_AddonsMenu.png&amp;filetimestamp=20240613205204&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_AddonsMenu.png" decoding="async" width="796" height="636" class="mw-file-element" data-file-width="796" data-file-height="636"></a><figcaption></figcaption></figure>
-<ol><li>A <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-library">Parts library</a>. This library is a treasure trove of useful models or model fragments crafted by FreeCAD users. All items in this library are freely available for use in your projects and can be accessed directly within your FreeCAD setup.</li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons">Additional workbenches</a>. These are specialized extensions that enhance FreeCAD&rsquo;s functionality for specific tasks. Example applications include animating model parts or managing specific construction processes like sheet metal folding or BIM (Building Information Modeling). Detailed information about each workbench, including an overview of the tools it contains, is provided on each addon's page, accessible through the corresponding link in the addon manager.</li>
-<li>A wide range of <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros">macros</a> is also available for download. These can significantly streamline your workflow, and detailed documentation on how to use them can be found on the <a href="../Macros_recipes.html" title="Macros recipes">FreeCAD wiki</a>.</li></ol>
+<ol><li>A <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-library">Knihovna d&iacute;l&#367;</a>. Tato knihovna je pokladnic&iacute; u&#382;ite&#269;n&yacute;ch model&#367; nebo fragment&#367; model&#367; vytvo&#345;en&yacute;ch u&#382;ivateli FreeCADu. V&scaron;echny polo&#382;ky v t&eacute;to knihovn&#283; jsou voln&#283; k dispozici pro pou&#382;it&iacute; ve va&scaron;ich projektech a jsou p&#345;&iacute;stupn&eacute; p&#345;&iacute;mo z va&scaron;eho nastaven&iacute; FreeCADu.</li>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons">Dodate&#269;n&eacute; pracovn&iacute; plochy</a>. FreeCADu pro konkr&eacute;tn&iacute; &uacute;koly. Mezi p&#345;&iacute;klady pou&#382;it&iacute; pat&#345;&iacute; animace &#269;&aacute;st&iacute; modelu nebo spr&aacute;va konkr&eacute;tn&iacute;ch konstruk&#269;n&iacute;ch proces&#367;, jako je oh&yacute;b&aacute;n&iacute; plechu nebo BIM (Building Information Modeling). Podrobn&eacute; informace o ka&#382;d&eacute;m pracovn&iacute;m prost&#345;ed&iacute;, v&#269;etn&#283; p&#345;ehledu n&aacute;stroj&#367;, kter&eacute; obsahuje, jsou k dispozici na str&aacute;nce ka&#382;d&eacute;ho dopl&#328;ku, p&#345;&iacute;stupn&eacute;m prost&#345;ednictv&iacute;m odpov&iacute;daj&iacute;c&iacute;ho odkazu v spr&aacute;vci dopl&#328;k&#367;.</li>
+<li>K dispozici je tak&eacute; &scaron;irok&aacute; &scaron;k&aacute;la <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros">maker</a> ke sta&#382;en&iacute;. Ty mohou v&yacute;razn&#283; zefektivnit v&aacute;&scaron; pracovn&iacute; postup a podrobnou dokumentaci o jejich pou&#382;it&iacute; najdete na <a href="../Macros_recipes.html" title="Macros recipes">FreeCAD wiki</a>.</li></ol>
 <p><br>
 As of FreeCAD v0.17.9940, the recommended installation method of any of the above tools is the built-in Addon Manager. However, if for any reason this option is not available, then manual installation is always possible. More information can be found at the <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons">FreeCAD addons page</a> 
 </p><p><b>Read more</b>
@@ -173,12 +173,12 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112022256
+Cached time: 20260112022535
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.112 seconds
+CPU time usage: 0.094 seconds
+Real time usage: 0.161 seconds
 Preprocessor visited node count: 135/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
@@ -189,13 +189,13 @@ Unstrip post&#8208;expand size: 2778/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.097      1 -total
- 71.37%    5.065      1 Template:Manual:TOC
- 56.60%    4.017      1 Manual:Summary/cs
- 23.43%    1.663      2 Template:Docnav
+100.00%   12.359      1 -total
+ 79.50%    9.825      1 Template:Manual:TOC
+ 55.22%    6.824      1 Manual:Summary/cs
+ 16.71%    2.065      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112022256 and revision id 1736939. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112022535 and revision id 1736942. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
