--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -155,13 +155,13 @@
 Od verze FreeCAD v0.17.9940 je doporu&#269;en&yacute;m zp&#367;sobem instalace v&scaron;ech v&yacute;&scaron;e uveden&yacute;ch n&aacute;stroj&#367; vestav&#283;n&yacute; Addon Manager. Pokud v&scaron;ak z jak&eacute;hokoli d&#367;vodu tato mo&#382;nost nen&iacute; k dispozici, je v&#382;dy mo&#382;n&eacute; prov&eacute;st manu&aacute;ln&iacute; instalaci. V&iacute;ce informac&iacute; najdete na<a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons">str&aacute;nce dopl&#328;k&#367; FreeCADu</a> 
 </p><p><b>Dal&scaron;&iacute; informace:</b>
 </p>
-<ul><li><a href="../Download.html" title="Download">More download options</a></li>
-<li><a rel="nofollow" class="external text" href="https://launchpad.net/~freecad-maintainers">FreeCAD PPA for Ubuntu</a></li>
-<li><a rel="nofollow" class="external text" href="https://launchpad.net/freecad-extras">FreeCAD addons PPA for Ubuntu</a></li>
-<li><a href="../Compiling.html" title="Compiling">Compile FreeCAD yourself</a></li>
-<li><a rel="nofollow" class="external text" href="https://crowdin.com/project/freecad">FreeCAD translations</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD">FreeCAD github page</a></li>
-<li><a href="../Std_AddonMgr.html" title="Std AddonMgr">The FreeCAD addons manager</a></li></ul>
+<ul><li><a href="../Download.html" title="Download">Dal&scaron;&iacute; mo&#382;nosti stahov&aacute;n&iacute;</a></li>
+<li><a rel="nofollow" class="external text" href="https://launchpad.net/~freecad-maintainers">FreeCAD PPA pro Ubuntu</a></li>
+<li><a rel="nofollow" class="external text" href="https://launchpad.net/freecad-extras">Dopl&#328;ky FreeCAD PPA pro Ubuntu</a></li>
+<li><a href="../Compiling.html" title="Compiling">Vlastn&iacute; kompilace FreeCADu</a></li>
+<li><a rel="nofollow" class="external text" href="https://crowdin.com/project/freecad">P&#345;eklad FreCADu</a></li>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD">Str&aacute;nka FreeCADu na GitHubu </a></li>
+<li><a href="../Std_AddonMgr.html" title="Std AddonMgr">The Spr&aacute;vce dopl&#328;k&#367; FreeCADu</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -173,12 +173,12 @@ Od verze FreeCAD v0.17.9940 je doporu&#269;en&yacute;m zp&#367;sobem instalace v
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112022758
+Cached time: 20260112023118
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.124 seconds
+CPU time usage: 0.079 seconds
+Real time usage: 0.140 seconds
 Preprocessor visited node count: 135/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
@@ -189,13 +189,13 @@ Unstrip post&#8208;expand size: 2778/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.176      1 -total
- 77.33%    9.415      1 Template:Manual:TOC
- 68.22%    8.306      1 Manual:Summary/cs
- 19.87%    2.420      2 Template:Docnav
+100.00%    8.644      1 -total
+ 65.39%    5.652      1 Template:Manual:TOC
+ 48.65%    4.205      1 Manual:Summary/cs
+ 30.07%    2.599      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112022758 and revision id 1736948. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112023118 and revision id 1736950. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
