Created page with "{{Docnav |[[Manual:Installing|Manual:Instalace]] |[[Manual:Navigating_in_the_3D_view|Manual:Navigace ve 3D zobrazení]] |[[Manual:Introduction|Manual start]] |IconC=Crystal_Clear_manual.png }}"

--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -13,8 +13,8 @@
 <li><a href="../ja/Manual;The_FreeCAD_Interface.html" class="mw-pt-progress mw-pt-progress--high" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;FreeCAD&#12398;&#12518;&#12540;&#12470;&#12540;&#12452;&#12531;&#12479;&#12501;&#12455;&#12540;&#12473; (91% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Manual;The_FreeCAD_Interface.html" class="mw-pt-progress mw-pt-progress--complete" title="&#49444;&#47749;&#49436;:FreeCAD &#51064;&#53552;&#54168;&#51060;&#49828; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Installing.html" title="Manual:Installing">Manual:Installing</a></div>
-    <div><a href="../Manual;Navigating_in_the_3D_view.html" class="mw-redirect" title="Manual:Navigating in the 3D view">Manual:Navigating in the 3D view</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Installing.html" title="Manual:Installing">Manual:Instalace</a></div>
+    <div><a href="../Manual;Navigating_in_the_3D_view.html" class="mw-redirect" title="Manual:Navigating in the 3D view">Manual:Navigace ve 3D zobrazen&iacute;</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
@@ -149,15 +149,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112023323
+Cached time: 20260112023410
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.106 seconds
-Real time usage: 0.160 seconds
+Real time usage: 0.163 seconds
 Preprocessor visited node count: 199/1000000
-Post&#8208;expand include size: 8657/2097152 bytes
-Template argument size: 754/2097152 bytes
+Post&#8208;expand include size: 8654/2097152 bytes
+Template argument size: 752/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -165,16 +165,16 @@ Unstrip post&#8208;expand size: 2911/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.419      1 -total
- 44.94%    6.030      1 Template:Manual:TOC
- 33.89%    4.548      1 Manual:Summary/cs
- 14.02%    1.881      2 Template:Docnav
- 13.10%    1.758      2 Template:MenuCommand
- 11.47%    1.539      2 Template:VersionMinus
- 11.13%    1.494      3 Template:Version
+100.00%   15.269      1 -total
+ 41.12%    6.279      1 Template:Manual:TOC
+ 28.29%    4.319      1 Manual:Summary/cs
+ 22.18%    3.386      2 Template:Docnav
+ 11.32%    1.729      2 Template:VersionMinus
+ 10.22%    1.560      3 Template:Version
+  9.35%    1.428      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112023322 and revision id 1736952. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112023410 and revision id 1736954. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
