--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -68,7 +68,7 @@
 <li><a href="../Manual;Creating_parametric_objects.html" title="Manual:Creating parametric objects">Creating parametric objects</a></li>
 <li><a href="../Manual;Creating_interface_tools.html" title="Manual:Creating interface tools">Creating interface tools</a></li></ul></li>
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
-<p>FreeCAD is based on the <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Qt_(software)">Qt framework</a> and is characterized by a simple and straightforward interface. More experienced CAD users will be able to identify similarities with other software, while new users will find it easy to navigate and discover the various options FreeCAD offers. Here is the default look of FreeCAD:
+<p>FreeCAD je zalo&#382;en na <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Qt_(software)">Qt frameworku</a> a vyzna&#269;uje se jednoduch&yacute;m a p&#345;ehledn&yacute;m rozhran&iacute;m. Zku&scaron;en&#283;j&scaron;&iacute; u&#382;ivatel&eacute; CADu v n&#283;m najdou podobnosti s jin&yacute;mi programy, zat&iacute;mco nov&iacute; u&#382;ivatel&eacute; se v n&#283;m snadno zorientuj&iacute; a objev&iacute; r&#367;zn&eacute; mo&#382;nosti, kter&eacute; FreeCAD nab&iacute;z&iacute;. Zde je v&yacute;choz&iacute; vzhled FreeCADu:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_Start.png&amp;filetimestamp=20240613202630&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_Start.png" decoding="async" width="1849" height="1050" class="mw-file-element" data-file-width="1849" data-file-height="1050"></a></span>
 </p><p>The Start Page serves as the welcoming screen, designed to facilitate quick and easy access to the main areas of FreeCAD that a user might wish to explore. Through it, users can effortlessly create new parts, open recent files, and initiate 2D drafting. Additionally, it features shortcuts to helpful resources like tutorials and user forums, which are invaluable for both beginners and experienced users seeking guidance or tips. Users can easily customize the appearance of the Start Page according to their preferences.
 </p><p>As you become more proficient with FreeCAD, you might adjust the settings under preferences. This can configure FreeCAD to open directly into one of the Workbenches with a new document ready to go when you launch it. Alternatively, you can simply close the Start Page tab and manually create a new document.
@@ -149,12 +149,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112023427
+Cached time: 20260112023533
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.147 seconds
+CPU time usage: 0.106 seconds
+Real time usage: 0.187 seconds
 Preprocessor visited node count: 199/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
@@ -165,16 +165,16 @@ Unstrip post&#8208;expand size: 2911/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.843      1 -total
- 57.08%    7.901      1 Template:Manual:TOC
- 40.76%    5.642      1 Manual:Summary/cs
- 13.78%    1.907      2 Template:Docnav
-  8.91%    1.233      3 Template:Version
-  8.17%    1.131      2 Template:MenuCommand
-  7.04%    0.975      2 Template:VersionMinus
+100.00%   23.441      1 -total
+ 52.46%   12.296      1 Template:Manual:TOC
+ 38.46%    9.015      1 Manual:Summary/cs
+ 14.14%    3.314      2 Template:Docnav
+ 11.44%    2.683      3 Template:Version
+  9.57%    2.244      2 Template:VersionMinus
+  6.34%    1.485      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112023426 and revision id 1736956. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112023533 and revision id 1736958. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
