--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -70,7 +70,7 @@
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
 <p>FreeCAD je zalo&#382;en na <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Qt_(software)">Qt frameworku</a> a vyzna&#269;uje se jednoduch&yacute;m a p&#345;ehledn&yacute;m rozhran&iacute;m. Zku&scaron;en&#283;j&scaron;&iacute; u&#382;ivatel&eacute; CADu v n&#283;m najdou podobnosti s jin&yacute;mi programy, zat&iacute;mco nov&iacute; u&#382;ivatel&eacute; se v n&#283;m snadno zorientuj&iacute; a objev&iacute; r&#367;zn&eacute; mo&#382;nosti, kter&eacute; FreeCAD nab&iacute;z&iacute;. Zde je v&yacute;choz&iacute; vzhled FreeCADu:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_Start.png&amp;filetimestamp=20240613202630&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_Start.png" decoding="async" width="1849" height="1050" class="mw-file-element" data-file-width="1849" data-file-height="1050"></a></span>
-</p><p>The Start Page serves as the welcoming screen, designed to facilitate quick and easy access to the main areas of FreeCAD that a user might wish to explore. Through it, users can effortlessly create new parts, open recent files, and initiate 2D drafting. Additionally, it features shortcuts to helpful resources like tutorials and user forums, which are invaluable for both beginners and experienced users seeking guidance or tips. Users can easily customize the appearance of the Start Page according to their preferences.
+</p><p>&Uacute;vodn&iacute; str&aacute;nka slou&#382;&iacute; jako uv&iacute;tac&iacute; obrazovka, kter&aacute; usnad&#328;uje rychl&yacute; a snadn&yacute; p&#345;&iacute;stup k hlavn&iacute;m oblastem programu FreeCAD, kter&eacute; by u&#382;ivatel mohl cht&iacute;t prozkoumat. Prost&#345;ednictv&iacute;m n&iacute; mohou u&#382;ivatel&eacute; snadno vytv&aacute;&#345;et nov&eacute; sou&#269;&aacute;sti, otev&iacute;rat naposledy pou&#382;it&eacute; soubory a zah&aacute;jit 2D kreslen&iacute;. Nav&iacute;c obsahuje odkazy na u&#382;ite&#269;n&eacute; zdroje, jako jsou v&yacute;ukov&eacute; programy a u&#382;ivatelsk&aacute; f&oacute;ra, kter&eacute; jsou neoceniteln&eacute; jak pro za&#269;&aacute;te&#269;n&iacute;ky, tak pro zku&scaron;en&eacute; u&#382;ivatele hledaj&iacute;c&iacute; rady nebo tipy. U&#382;ivatel&eacute; mohou snadno p&#345;izp&#367;sobit vzhled &uacute;vodn&iacute; str&aacute;nky podle sv&yacute;ch preferenc&iacute;.
 </p><p>As you become more proficient with FreeCAD, you might adjust the settings under preferences. This can configure FreeCAD to open directly into one of the Workbenches with a new document ready to go when you launch it. Alternatively, you can simply close the Start Page tab and manually create a new document.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_PartDesign.png&amp;filetimestamp=20240613202609&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_PartDesign.png" decoding="async" width="1849" height="1050" class="mw-file-element" data-file-width="1849" data-file-height="1050"></a></span>
 </p>
@@ -149,12 +149,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112023533
+Cached time: 20260112023555
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.187 seconds
+CPU time usage: 0.097 seconds
+Real time usage: 0.141 seconds
 Preprocessor visited node count: 199/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
@@ -165,16 +165,16 @@ Unstrip post&#8208;expand size: 2911/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.441      1 -total
- 52.46%   12.296      1 Template:Manual:TOC
- 38.46%    9.015      1 Manual:Summary/cs
- 14.14%    3.314      2 Template:Docnav
- 11.44%    2.683      3 Template:Version
-  9.57%    2.244      2 Template:VersionMinus
-  6.34%    1.485      2 Template:MenuCommand
+100.00%   13.671      1 -total
+ 51.47%    7.037      1 Template:Manual:TOC
+ 35.75%    4.887      1 Manual:Summary/cs
+ 18.95%    2.591      2 Template:Docnav
+ 10.06%    1.375      3 Template:Version
+  7.78%    1.064      2 Template:MenuCommand
+  6.64%    0.908      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112023533 and revision id 1736958. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112023555 and revision id 1736960. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
