--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -77,7 +77,7 @@
 </p>
 <meta property="mw:PageProp/toc">
 <h3><span id="Pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Pracovn&iacute;_plochy">Pracovn&iacute; plochy</span></h3>
-<p>FreeCAD employs a system called "Workbenches," similar to the conceptual frameworks used in advanced design software like Revit or CATIA. The idea of a Workbench is analogous to specialized stations in a scientific lab, where different workstations are equipped for distinct types of experiments. In a lab, you might have one area dedicated to chemistry, another to biology, and a third to physics, each outfitted with the specific tools needed for those disciplines.
+<p>FreeCAD vyu&#382;&iacute;v&aacute; syst&eacute;m nazvan&yacute; "Workbench" (pracovn&iacute; plocha), kter&yacute; je podobn&yacute; koncep&#269;n&iacute;m r&aacute;mc&#367;m pou&#382;&iacute;van&yacute;m v pokro&#269;il&eacute;m n&aacute;vrhov&eacute;m softwaru, jako je Revit nebo CATIA. My&scaron;lenka pracovn&iacute; plochy je analogick&aacute; se specializovan&yacute;mi stanicemi ve v&#283;deck&eacute; laborato&#345;i, kde jsou r&#367;zn&eacute; pracovn&iacute; stanice vybaveny pro r&#367;zn&eacute; typy experiment&#367;. V laborato&#345;i m&#367;&#382;ete m&iacute;t jednu oblast v&#283;novanou chemii, druhou biologii a t&#345;et&iacute; fyzice, p&#345;i&#269;em&#382; ka&#382;d&aacute; z nich je vybavena specifick&yacute;mi n&aacute;stroji pot&#345;ebn&yacute;mi pro dan&eacute; obory.
 </p><p>In the context of FreeCAD, each Workbench is tailored to a particular type of task, organizing all the necessary tools for that activity in one interface. When switching between Workbenches, the set of tools and controls visible in the user interface adjusts to reflect the needs of the selected task, though the actual project contents or "scene" you are working on does not change. This allows for seamless transitions in workflow, such as beginning a design with basic 2D shapes in the Draft Workbench and then elaborating on these designs with advanced modeling tools in the Part Workbench.
 </p><p>The terms "Workbench" and "Module" are sometimes used interchangeably, but they have distinct meanings within FreeCAD. A Module is any extension that adds functionality to FreeCAD, while a Workbench is a specific kind of Module equipped with its own user interface components such as toolbars and menus, designed to facilitate specific types of tasks. Thus, every Workbench is a Module, but not every Module qualifies as a Workbench.
 </p><p>The most important control of the FreeCAD interface is the Workbench selector, which you use to switch from one Workbench to the other:
@@ -150,12 +150,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112023648
+Cached time: 20260112023803
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.097 seconds
-Real time usage: 0.147 seconds
+CPU time usage: 0.106 seconds
+Real time usage: 0.295 seconds
 Preprocessor visited node count: 200/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
@@ -166,16 +166,16 @@ Unstrip post&#8208;expand size: 2911/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.022      1 -total
- 54.32%    7.617      1 Template:Manual:TOC
- 41.30%    5.791      1 Manual:Summary/cs
- 15.60%    2.187      2 Template:Docnav
- 11.43%    1.602      2 Template:VersionMinus
-  7.29%    1.022      3 Template:Version
-  6.55%    0.919      2 Template:MenuCommand
+100.00%   26.205      1 -total
+ 42.56%   11.152      1 Template:Manual:TOC
+ 31.72%    8.312      1 Manual:Summary/cs
+ 15.16%    3.974      2 Template:VersionMinus
+ 13.85%    3.630      2 Template:Docnav
+ 13.48%    3.533      3 Template:Version
+ 11.20%    2.935      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112023648 and revision id 1736964. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112023803 and revision id 1736966. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
