--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -82,7 +82,7 @@
 </p><p>Term&iacute;ny "Workbench" a "Module" se n&#283;kdy pou&#382;&iacute;vaj&iacute; zam&#283;niteln&#283;, ale ve FreeCADu maj&iacute; odli&scaron;n&yacute; v&yacute;znam. Modul je jak&eacute;koli roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; p&#345;id&aacute;v&aacute; funkcionalitu do FreeCADu, zat&iacute;mco Workbench je specifick&yacute; druh modulu vybaven&yacute; vlastn&iacute;mi komponentami u&#382;ivatelsk&eacute;ho rozhran&iacute;, jako jsou panely n&aacute;stroj&#367; a menu, ur&#269;en&eacute; k usnadn&#283;n&iacute; specifick&yacute;ch typ&#367; &uacute;kol&#367;. Ka&#382;d&yacute; Workbench je tedy modul, ale ne ka&#382;d&yacute; modul je Workbench.
 </p><p>Nejd&#367;le&#382;it&#283;j&scaron;&iacute;m ovl&aacute;dac&iacute;m prvkem rozhran&iacute; FreeCADu je voli&#269; pracovn&iacute;ho prost&#345;ed&iacute;, kter&yacute; slou&#382;&iacute; k p&#345;ep&iacute;n&aacute;n&iacute; mezi jednotliv&yacute;mi pracovn&iacute;mi prost&#345;ed&iacute;mi:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_WB.png&amp;filetimestamp=20240613200530&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_WB.png" decoding="async" width="1847" height="1054" class="mw-file-element" data-file-width="1847" data-file-height="1054"></a></span>
-</p><p>Workbenches often confuse new users, since it's not always easy to know in which Workbench to look for a specific tool. But they are quick to learn, and after a short while, they will feel natural. New users quickly realize that Workbenches are a convenient way to organize the multitude of tools FreeCAD has to offer. In addition, Workbenches are also fully customizable.
+</p><p>Pracovn&iacute; plochy &#269;asto matou nov&eacute; u&#382;ivatele, proto&#382;e nen&iacute; v&#382;dy snadn&eacute; v&#283;d&#283;t, ve kter&eacute; pracovn&iacute; plo&scaron;e hledat konkr&eacute;tn&iacute; n&aacute;stroj. Ale jejich ovl&aacute;d&aacute;n&iacute; se d&aacute; rychle nau&#269;it a po kr&aacute;tk&eacute; dob&#283; v&aacute;m budou p&#345;ipadat p&#345;irozen&eacute;. Nov&iacute; u&#382;ivatel&eacute; si rychle uv&#283;dom&iacute;, &#382;e pracovn&iacute; plochy jsou pohodln&yacute; zp&#367;sob, jak organizovat mno&#382;stv&iacute; n&aacute;stroj&#367;, kter&eacute; FreeCAD nab&iacute;z&iacute;. Krom&#283; toho jsou pracovn&iacute; plochy tak&eacute; pln&#283; p&#345;izp&#367;sobiteln&eacute;.
 </p>
 <h4><span class="mw-headline" id="Enabled_workbenches">Enabled workbenches</span></h4>
 <p>The following workbenches are enabled by default:
@@ -150,12 +150,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112024008
+Cached time: 20260112024032
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.122 seconds
-Real time usage: 0.184 seconds
+CPU time usage: 0.107 seconds
+Real time usage: 0.203 seconds
 Preprocessor visited node count: 200/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
@@ -166,16 +166,16 @@ Unstrip post&#8208;expand size: 2911/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.145      1 -total
- 51.28%    7.767      1 Template:Manual:TOC
- 38.03%    5.760      1 Manual:Summary/cs
- 16.26%    2.463      2 Template:Docnav
- 10.48%    1.587      2 Template:VersionMinus
-  8.56%    1.296      2 Template:MenuCommand
-  8.35%    1.265      3 Template:Version
+100.00%   22.724      1 -total
+ 40.64%    9.236      1 Template:Manual:TOC
+ 27.76%    6.309      1 Manual:Summary/cs
+ 14.55%    3.307      2 Template:Docnav
+ 14.15%    3.215      2 Template:VersionMinus
+ 12.87%    2.925      3 Template:Version
+ 10.81%    2.457      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112024008 and revision id 1736972. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112024032 and revision id 1736974. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
