Created page with "==== Povolené pracovní plochy ===="

--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -83,8 +83,9 @@
 </p><p>Nejd&#367;le&#382;it&#283;j&scaron;&iacute;m ovl&aacute;dac&iacute;m prvkem rozhran&iacute; FreeCADu je voli&#269; pracovn&iacute;ho prost&#345;ed&iacute;, kter&yacute; slou&#382;&iacute; k p&#345;ep&iacute;n&aacute;n&iacute; mezi jednotliv&yacute;mi pracovn&iacute;mi prost&#345;ed&iacute;mi:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_WB.png&amp;filetimestamp=20240613200530&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_WB.png" decoding="async" width="1847" height="1054" class="mw-file-element" data-file-width="1847" data-file-height="1054"></a></span>
 </p><p>Pracovn&iacute; plochy &#269;asto matou nov&eacute; u&#382;ivatele, proto&#382;e nen&iacute; v&#382;dy snadn&eacute; v&#283;d&#283;t, ve kter&eacute; pracovn&iacute; plo&scaron;e hledat konkr&eacute;tn&iacute; n&aacute;stroj. Ale jejich ovl&aacute;d&aacute;n&iacute; se d&aacute; rychle nau&#269;it a po kr&aacute;tk&eacute; dob&#283; v&aacute;m budou p&#345;ipadat p&#345;irozen&eacute;. Nov&iacute; u&#382;ivatel&eacute; si rychle uv&#283;dom&iacute;, &#382;e pracovn&iacute; plochy jsou pohodln&yacute; zp&#367;sob, jak organizovat mno&#382;stv&iacute; n&aacute;stroj&#367;, kter&eacute; FreeCAD nab&iacute;z&iacute;. Krom&#283; toho jsou pracovn&iacute; plochy tak&eacute; pln&#283; p&#345;izp&#367;sobiteln&eacute;.
+</p><p><span id="Enabled_workbenches"></span>
 </p>
-<h4><span class="mw-headline" id="Enabled_workbenches">Enabled workbenches</span></h4>
+<h4><span id="Povolen.C3.A9_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Povolen&eacute;_pracovn&iacute;_plochy">Povolen&eacute; pracovn&iacute; plochy</span></h4>
 <p>The following workbenches are enabled by default:
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Assembly_Workbench.html" title="Assembly Workbench">Assembly Workbench</a> for building and solving mechanical assemblies. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
@@ -150,13 +151,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112024032
+Cached time: 20260112024052
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.107 seconds
-Real time usage: 0.203 seconds
-Preprocessor visited node count: 200/1000000
+CPU time usage: 0.095 seconds
+Real time usage: 0.149 seconds
+Preprocessor visited node count: 201/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
 Highest expansion depth: 5/100
@@ -166,16 +167,16 @@ Unstrip post&#8208;expand size: 2911/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.724      1 -total
- 40.64%    9.236      1 Template:Manual:TOC
- 27.76%    6.309      1 Manual:Summary/cs
- 14.55%    3.307      2 Template:Docnav
- 14.15%    3.215      2 Template:VersionMinus
- 12.87%    2.925      3 Template:Version
- 10.81%    2.457      2 Template:MenuCommand
+100.00%   16.681      1 -total
+ 59.20%    9.876      1 Template:Manual:TOC
+ 44.83%    7.478      1 Manual:Summary/cs
+ 13.53%    2.256      2 Template:Docnav
+  8.61%    1.436      3 Template:Version
+  7.07%    1.179      2 Template:VersionMinus
+  6.75%    1.126      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112024032 and revision id 1736974. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112024052 and revision id 1736976. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
