Created page with "* [[Image:Workbench_Draft.svg|32px]] The [[Draft_Workbench|Pracovní plocha Draft]] obsahuje 2D nástroje a základní 2D a 3D CAD operace."

--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -91,7 +91,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Assembly_Workbench.html" title="Assembly Workbench">Pracovn&iacute; plocha Assembly</a> pro vytv&aacute;&#345;en&iacute; a &#345;e&scaron;en&iacute; mechanick&yacute;ch sestav. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Workbench.html" title="BIM Workbench">Pracovn&iacute; plocha BIM</a> pro pr&aacute;ci s architektonick&yacute;mi prvky a vytv&aacute;&#345;en&iacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a> model&#367;. Slu&#269;uje Arch Workbench a d&#345;&iacute;ve extern&iacute; BIM Workbench, kter&yacute; byl k dispozici <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_CAM.svg&amp;filetimestamp=20240316105021&amp;.html" class="mw-file-description"><img src="../File/Workbench_CAM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../CAM_Workbench.html" title="CAM Workbench">Pracovn&iacute; plocha CAM</a> se pou&#382;&iacute;v&aacute; k vytv&aacute;&#345;en&iacute; instrukc&iacute; G-k&oacute;du. Tato pracovn&iacute; plocha se ve <span style="font-size:small;color:blue;">0.21 and below</span> naz&yacute;vala Pracovn&iacute; plocha "Path".</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Draft_Workbench.html" title="Draft Workbench">Draft Workbench</a> contains 2D tools and basic 2D and 3D CAD operations.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Draft_Workbench.html" title="Draft Workbench">Pracovn&iacute; plocha Draft</a> obsahuje 2D n&aacute;stroje a z&aacute;kladn&iacute; 2D a 3D CAD operace.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_FEM.svg&amp;filetimestamp=20240405093343&amp;.html" class="mw-file-description"><img src="../File/Workbench_FEM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../FEM_Workbench.html" title="FEM Workbench">FEM Workbench</a> provides Finite Element Analysis (FEA) workflow.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Material.svg&amp;filetimestamp=20240623140009&amp;.html" class="mw-file-description"><img src="../File/Workbench_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Material_Workbench.html" title="Material Workbench">Material Workbench</a> handles the FreeCAD material system. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Mesh.svg&amp;filetimestamp=20200404173024&amp;.html" class="mw-file-description"><img src="../File/Workbench_Mesh.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Mesh_Workbench.html" title="Mesh Workbench">Mesh Workbench</a> for working with triangulated meshes.</li></ul>
@@ -151,12 +151,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112025428
+Cached time: 20260112025505
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.103 seconds
-Real time usage: 0.146 seconds
+Real time usage: 0.171 seconds
 Preprocessor visited node count: 201/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
@@ -167,16 +167,16 @@ Unstrip post&#8208;expand size: 2911/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.066      1 -total
- 51.78%    8.319      1 Template:Manual:TOC
- 33.29%    5.348      1 Manual:Summary/cs
- 13.66%    2.194      3 Template:Version
- 12.24%    1.967      2 Template:Docnav
-  9.53%    1.531      2 Template:VersionMinus
-  7.17%    1.152      2 Template:MenuCommand
+100.00%   12.784      1 -total
+ 46.44%    5.937      1 Template:Manual:TOC
+ 35.09%    4.486      1 Manual:Summary/cs
+ 14.99%    1.917      2 Template:Docnav
+ 13.14%    1.680      3 Template:Version
+ 11.01%    1.407      2 Template:MenuCommand
+  8.39%    1.073      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112025428 and revision id 1736986. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112025504 and revision id 1736988. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
